Added the base for the trivia game and its settings

--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -53,4 +53,14 @@
   a:hover {
     text-decoration: underline;
   }
+  .error {
+    color: red;
+    margin-top: 10px;
+  }
+  
+  .success {
+    color: green;
+    margin-top: 10px;
+  }
+  
   
