--- a/src/app/pages/user-data/user-data.component.css
+++ b/src/app/pages/user-data/user-data.component.css
@@ -36,3 +36,25 @@ progress::-webkit-progress-value {
   background-color: #00cc99;
   border-radius: 5px;
 }
+
+.mat-stats {
+  max-width: 600px;
+  margin: 2rem auto;
+}
+
+.stats-list > div {
+  margin: 10px 0;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+mat-progress-bar {
+  margin-top: 5px;
+}
+
+.loading-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+}
