added a main-menu

--- a/src/app/pages/setup/setup.component.html
+++ b/src/app/pages/setup/setup.component.html
@@ -1,5 +1,6 @@
 <div class="setup-container">
   <h2>🎮 Trivia Game Setup</h2>
+  <button mat-stroked-button color="warn" routerLink="/main-menu">← Back to Menu</button>
 
   <form (ngSubmit)="createGame()">
     <label for="players">Number of Players:</label>
