--- a/src/app/pages/user-data/user-data.component.html
+++ b/src/app/pages/user-data/user-data.component.html
@@ -1,3 +1,5 @@
+<button mat-stroked-button color="warn" routerLink="/main-menu">← Back to Menu</button>
+
 <div *ngIf="loading" class="loading-container">
   <mat-spinner diameter="40"></mat-spinner>
 </div>
